# SDAO

./: .gitignore  Cargo.toml  README.md  pyproject.toml
analyze_tools/: analyze_benchmarks.py
model/: __init__.py  __main__.py  parallel_runner.py  sdao.py  solver.py  utils.py
model/functions/: bench_funcs.py  cec_funcs.py  mpb_funcs.py  real_life_funcs.py  soco_funcs.py  stoch_funcs.py
model/performance_metrics/: latex_cec.py  latex_soco.py  metrics.py  plotting.py  plotting_soco.py  run.py  tables.py
model/soa/: algebraic_sgd.py  amso.py  fishing_cat.py  fractal.py  gfa.py  pade_pet.py  path_relinking.py  sfoa.py  shade.py  template.py  tlpso.py  two_step_sqp.py
model/utils/: __init__.py  optimize_params.py  statistical_utils.py
src/: enums.rs  lib.rs  main.rs
src/benchmarks/: benchmark_utils.rs  functions.rs  mod.rs
src/benchmarks/other_algorithms/: fla.rs  gd.rs  mod.rs  pso.rs  sa.rs
src/model/: mod.rs  particle.rs  sdao.rs
tests/: evaluation_func_tests.rs  integration_test.rs
tests/functions/: mod.rs
