[tool.poetry]
name = "sdao"
version = "0.1.0"
description = "Project for developing a new optimization approach for Stochastic functions"
authors = ["ricardoleal20 <rick.leal420@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = ">=2.2.1"
tqdm = ">=4.67.1"
matplotlib = ">=3.10.0"
pydash = ">=8.0.4"
pandas = ">=2.2.3"
scipy = ">=1.15.1"
statsmodels = ">=0.14.4"
jinja2 = ">=3.1.5"

[tool.poetry.dev-dependencies]
black = ">=25.1.0"
ruff = ">=0.9.7"
pyright = ">=1.1.394"

[tool.pyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = false

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-string-normalization = true
skip-magic-trailing-comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
